SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/EBizCharge_Fields_Config__c.object-meta.xml
<CustomObject>
    <label>EBizCharge Fields Config</label>
    <nameField>
        <label>EBizCharge Fields Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizCharge Fields Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>