SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EBizCharge Fields Config</relationshipLabel>
    <relationshipName>EBizCharge_Fields_Config</relationshipName>
    <type>Lookup</type>
</CustomField>