SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBizCharge Fields Config</relationshipLabel>
    <relationshipName>EBizCharge_Fields_Config</relationshipName>
    <type>Lookup</type>
</CustomField>