SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/fields/EBizCharge_Amount_Source__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Amount_Source__c</fullName>
    <label>EBizCharge Amount Source</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>