SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/fields/EBizCharge_CustomerId__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_CustomerId__c</fullName>
    <externalId>true</externalId>
    <label>EBizCharge CustomerId</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>