SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/fields/EBizCharge_Email__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Email__c</fullName>
    <label>EBizCharge Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>