SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/fields/EBizCharge_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Received_Amount__c</fullName>
    <label>Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>