SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Fields_Config__c/fields/EbizCharge_Web_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>EbizCharge_Web_Form_URL__c</fullName>
    <label>EbizCharge Web Form URL</label>
    <type>Url</type>
</CustomField>